MediaStream API: local addTrack() and removeTrack() operations should not fire events. https://bugs.webkit.org/show_bug.cgi?id=111079

Reviewed by Adam Barth.

Source/WebCore:

Removed the scheduling of "addtrack" and "removetrack" events by
addTrack and removeTrack(). Replaced the test since the old test was
driven by the event firing removed by this patch.

Test: fast/mediastream/MediaStream-add-remove-tracks.html

* Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::addTrack):
(WebCore::MediaStream::removeTrack):

LayoutTests:

Replaced the test since the old test was driven by the event firing
removed by this patch.

* fast/mediastream/MediaStream-add-remove-tracks-expected.txt: Added.
* fast/mediastream/MediaStream-add-remove-tracks.html: Added.
* fast/mediastream/MediaStreamTrackList-expected.txt: Removed.
* fast/mediastream/MediaStreamTrackList.html: Removed.


git-svn-id: svn://svn.chromium.org/blink/trunk@144610 bbb929c8-8fbe-4397-9dbb-9b2b20218538