third_party/WebKit/Source/WebCore/Modules/mediastream/MediaStream.cpp
@@ -166,7 +166,6 @@ void MediaStream::addTrack(PassRefPtr<MediaStreamTrack> prpTrack, ExceptionCode&
     }
 
     MediaStreamCenter::instance().didAddMediaStreamTrack(m_descriptor.get(), newTrack->component());
-    scheduleDispatchEvent(MediaStreamTrackEvent::create(eventNames().addtrackEvent, false, false, newTrack.release()));
 }
 
 void MediaStream::removeTrack(PassRefPtr<MediaStreamTrack> prpTrack , ExceptionCode& ec)
@@ -203,7 +202,6 @@ void MediaStream::removeTrack(PassRefPtr<MediaStreamTrack> prpTrack , ExceptionC
     }
 
     MediaStreamCenter::instance().didRemoveMediaStreamTrack(m_descriptor.get(), track->component());
-    scheduleDispatchEvent(MediaStreamTrackEvent::create(eventNames().removetrackEvent, false, false, track.release()));
 }
 
 MediaStreamTrack* MediaStream::getTrackById(String id)
